tool/rlc/test/messages/wrong_action_return_type.rl
# RUN: rlc %s -o %t -i %stdl.ib --print-ir-on-failure=false 2>&1 --expect-fail | FileCheck %s

# CHECK: error: Int is not allowed as action return type

act action() -> Int:
	return 5

